Removed text-align for header content box from LESS and added it as an inline style to help resolve PIRATE-3660.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -91,6 +91,12 @@ header.bk-header {
 	@media @tablet {
 		padding: 0 0 60px;
 	}
+
+	.textwidget {
+		@media @tablet {
+			text-align: center;
+		}
+	}
 }
 
 
